--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,11 +12,11 @@ name = "quartz_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "2.0.1", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-rc", features = [] }
-tauri-plugin-shell = "2.0.0-rc"
+tauri = { version = "2.0.4", features = [] }
+tauri-plugin-shell = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1.40.0", features = ["full"] }
@@ -24,6 +24,6 @@ thiserror = "1.0.64"
 lazy_static = "1.5.0"
 notify = "6.1.1"
 notify-debouncer-full = "0.3.1"
-tauri-plugin-dialog = "2.0.0-rc"
+tauri-plugin-dialog = "2.0.0"
 warp = "0.3.7"
 
